# Labs

Labor1/: CMakeLists.txt  SumFunctions.c  SumFunctions.h  elsoFeladat.c  elsoFeladat.h  harmadikFeladat.c  harmadikFeladat.h  main.c  masodikFeladat.c  masodikFeladat.h  negyedikFeladat.c  negyedikFeladat.h
Labs/: CMakeLists.txt  main.c
Labs/sapi_sales/headers/manager/: lab10.h  lab12.h  lab2.h  lab3.h  lab5.h  lab8.h  lab9.h  lab_manager.h
Labs/sapi_sales/headers/models/: product.h  user.h
Labs/sapi_sales/headers/models/structures/: product_array.h  product_hash_table.h  product_stack.h  user_array.h  user_binary_search_tree.h  user_list.h  user_queue.h
Labs/sapi_sales/src/manager/: lab10.c  lab12.c  lab2.c  lab3.c  lab5.c  lab8.c  lab9.c  lab_manager.c
Labs/sapi_sales/src/models/: product.c  user.c
Labs/sapi_sales/src/models/strucutres/: product_array.c  product_hash_table.c  product_stack.c  user_array.c  user_binary_search_tree.c  user_list.c  user_queue.c
Labs/shared/headers/: errors.h  messages.h  useful.h
Labs/shared/src/: errors.c  messages.c
